# ngx_voice_agent

./: .cz.toml  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  BETA_LAUNCH_READY.md  BETA_READY_STATUS.md  BETA_STATUS_AUGUST_12.md  BRANCH_PROTECTION_INSTRUCTIONS.md  BRANCH_PROTECTION_SETUP.md  CACHE_CONSOLIDATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_2025_08_03.md  CHANGELOG_AUGUST_12.md  CLAUDE 2.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY_2025_08_03.md  COMPLETE_PROJECT_INVENTORY.md  CONFIGURATION_MIGRATION.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  Dockerfile.simple  EMPATHY_CONSOLIDATION_COMPLETE.md  FRONTEND_COMPLETION_REPORT.md  GUIA_PASO_A_PASO_GITHUB.md  LICENSE  ML_NLP_CONSOLIDATION_SUMMARY.md  NEXT_COMMANDS.md  NEXT_STEPS_BETA.md  PHASE_0_VALIDATION_COMPLETE.md  PHASE_2_ML_PIPELINE_INTEGRATION_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  PYDANTIC_V2_MIGRATION_SUMMARY.md  README.md  REAL_STATUS_REPORT.md  REPOSITORY_SETUP_COMPLETE.md  SECURITY.md  SECURITY_FIXES_PROGRESS.md  (+33 more)
.github/: CI_CD_DOCUMENTATION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECRETS_SETUP.md
configs/: logging.json
docker/: Dockerfile  Dockerfile.production  Dockerfile.production.simple  build.sh  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  validate.sh
docs/: 00_INDEX.md  AB_TESTING_IMPLEMENTATION.md  ANALISIS_ERRORES.md  BRANCHING_STRATEGY.md  CACHE_MIGRATION.md  CIRCUIT_BREAKERS.md  CLEAN_STATE_SUMMARY.md  COMPLETE_PROJECT_ROADMAP.md  DOCKER_DEPLOYMENT.md  EMPATHY_10_IMPROVEMENTS_REPORT.md  EMPATHY_IMPROVEMENTS.md  ENTRYPOINT_STANDARDIZATION.md  ERRORES_CORREGIDOS.md  ESTADO_ACTUAL_BETA.md  EXPLICACION_TODOS_LOS_TESTS.md  FIXES_AGENT_PERSONALITIES_20250727.md  GITHUB_SECRETS_SETUP.md  HTTP_CACHING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_COMPLETE.md  IMPLEMENTATION_PROGRESS_2025-07-27.md  JWT_ROTATION_GUIDE.md  ML_DRIFT_DETECTION.md  ML_INTEGRATION_CHECKLIST.md  ML_PIPELINE_ARCHITECTURE.md  MONITORING_SETUP.md  NEXT_SESSION_PLAN.md  NEXT_STEPS.md  P0_CRITICAL_FIXES.md  PHASE_1_ML_INTEGRATION_COMPLETED.md  PHASE_4-6_IMPLEMENTATION_GUIDE.md  PII_ENCRYPTION_GUIDE.md  PLAN_CORRECCION_URGENTE.md  PLAN_DEFINITIVO_BETA.md  PRODUCTION_DEPLOYMENT.md  PROGRESO_2025_08_01.md  PROGRESO_BETA.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_ORGANIZATION_STATUS.md  README.md  (+8 more)
examples/: api_demo.py  api_integration_example.py  simple_api_example.py  test_unified_agent_v2.py
load-testing/: README.md  locustfile.py  requirements.txt
load_testing/: LOAD_TEST_REPORT.md  README.md  docker-compose.yml  load_test_report.html  load_test_results_stats_history.csv  locust.conf  locustfile.py  locustfile_simple.py  run_load_tests.sh  simple_test.py
models/: conversion_model.pkl  needs_model.pkl  objection_model.pkl
monitoring/: MONITORING_GUIDE.md  deploy-monitoring.sh  docker-compose.monitoring.yml
nginx/: nginx.conf
scripts/: apply_performance_indexes.py  backup.sh  benchmark_decision_engine.py  cache_migration.py  create_follow_up_tables.sql  create_human_transfer_tables.sql  create_intent_analysis_tables.sql  create_ml_learning_tables.sql  create_qualification_tables.sql  deploy-monitoring.sh  deploy-production.sh  diagnose_conversation_outcomes.sql  diagnose_ml_schema.sql  encrypt_existing_data.py  fix_variant_id_issue.sql  health-check.sh  load_test_decision_engine.py  load_test_decision_engine_lite.py  migrate_empathy_imports.py  migrate_to_unified_decision_engine.py  ml_nlp_migration.py  mock_production_server.py  (+22 more)
(+560 files in other folders)
